event listing table fixes for movie title sentence format, top alignment, and responsive fixes for them

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -74,12 +74,17 @@ tr:nth-child(even) {
 td {
   border: 1px solid #000;
   padding: 0.5em;
-  vertical-align: middle;
+  vertical-align: top;
+}
+
+.date-display {
+  font-size: small;
 }
 .td-listing {
   text-align:left;
+  vertical-align: top;
   margin: 1em;
-  padding: 0;
+  padding: 0.5em;
 }
 ul.movies {
   list-style-type: none;
@@ -111,6 +116,13 @@ ul.no-bullets {
     border: 0px;
   }
 
+  .table-align {
+    //width: 90%;
+    //margin-right: 2em auto;
+    height: 3em;
+    margin: 0 5% -2em;
+  }
+
   table {
     border-collapse: collapse;
   }
@@ -132,6 +144,13 @@ ul.no-bullets {
     position: relative;
     text-align: center;
     padding-left: 90px;
+  }
+
+  .td-listing {
+    text-align:center;
+    vertical-align: top;
+    margin: 0;
+    padding-left:90px;
   }
 
   td::before {
